<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.appalmacen.Principal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:text="@string/titulo" />

        <TextView
            android:text="@string/tipoSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbSexo" />

        <TextView
            android:text="@string/tipoTituCalzado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textSize="18sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbCalzado" />

        <TextView
            android:text="@string/tipoMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cmbMarca" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtCantidad" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdCalcular"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:onClick="calcular" />

            <Button
                android:text="@string/borrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cmdBorrar"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUnitario"
            android:textSize="18sp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTotalCompra"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp" />
    </LinearLayout>
</RelativeLayout>
